[package]
name = "nossal"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
askama = "0.14.0"
askama_web = { version = "0.14.0", features = ["actix-web-4"] }
pulldown-cmark = "0.13.0"
yaml-front-matter = "0.1.0"
actix-web-middleware-slogger = { version = "0.1.0", features = ["tracing-request-id"] }
log = "0.4.27"
structured-logger = "1.0.4"
tracing-actix-web = "0.7.18"
tokio = "1.45.0"

